--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,13 +12,14 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="2">
+
         <TextView
-            android:text="MULTIMEDIA"
-            android:textSize="34sp"
-            android:textColor="@color/colorPrimary"
-            android:layout_centerInParent="true"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"></TextView>
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="MULTIMEDIA"
+            android:textColor="@android:color/holo_blue_dark"
+            android:textSize="34sp"></TextView>
     </RelativeLayout>
 
     <GridLayout
@@ -41,6 +42,7 @@
             android:layout_marginRight="16dp"
             app:cardElevation="8dp"
             app:cardCornerRadius="8dp"
+            app:cardBackgroundColor="@android:color/holo_blue_dark"
             >
             <LinearLayout
                 android:layout_gravity="center_horizontal|center_vertical"
@@ -49,11 +51,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
 
-                <ImageButton
+                <ImageView
                     android:layout_gravity="center_horizontal"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@android:drawable/sym_action_call"></ImageButton>
+                    android:src="@android:drawable/sym_action_call"></ImageView>
                 <TextView
                     android:text="CALL"
                     android:textAlignment="center"
@@ -75,6 +77,7 @@
             android:layout_marginRight="16dp"
             app:cardElevation="8dp"
             app:cardCornerRadius="8dp"
+            app:cardBackgroundColor="@android:color/holo_blue_dark"
             >
             <LinearLayout
                 android:layout_gravity="center_horizontal|center_vertical"
@@ -83,11 +86,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
 
-                <ImageButton
+                <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
-                    android:src="@android:drawable/sym_action_chat"></ImageButton>
+                    android:src="@android:drawable/sym_action_chat"></ImageView>
                 <TextView
                     android:text="MESSAGE"
                     android:textAlignment="center"
@@ -109,6 +112,7 @@
             android:layout_marginRight="16dp"
             app:cardElevation="8dp"
             app:cardCornerRadius="8dp"
+            app:cardBackgroundColor="@android:color/holo_blue_dark"
             >
             <LinearLayout
                 android:layout_gravity="center_horizontal|center_vertical"
@@ -117,15 +121,15 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
 
-                <ImageButton
+                <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
-                    android:src="@android:drawable/ic_dialog_info"></ImageButton>
+                    android:src="@android:drawable/ic_dialog_info"></ImageView>
                 <TextView
                     android:text="INTERNET"
                     android:textAlignment="center"
-                    android:textColor="@android:color/holo_blue_dark"
+                    android:textColor="@android:color/holo_purple"
                     android:textSize="18sp"
                     android:textStyle="bold"
                     android:layout_width="wrap_content"
@@ -143,6 +147,7 @@
             android:layout_marginRight="16dp"
             app:cardElevation="8dp"
             app:cardCornerRadius="8dp"
+            app:cardBackgroundColor="@android:color/holo_blue_dark"
             >
             <LinearLayout
                 android:layout_gravity="center_horizontal|center_vertical"
@@ -151,11 +156,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
 
-                <ImageButton
+                <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
-                    android:src="@android:drawable/stat_sys_headset"></ImageButton>
+                    android:src="@android:drawable/stat_sys_headset"></ImageView>
                 <TextView
                     android:text="MUSIC"
                     android:textAlignment="center"
