--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -7,7 +7,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MessageActivity"
-    android:padding="20dp">
+    android:padding="20dp"
+    android:background="@android:color/holo_blue_dark">
     <EditText
         android:id="@+id/Number"
         android:layout_width="match_parent"
