--- a/app/src/main/res/layout/activity_music.xml
+++ b/app/src/main/res/layout/activity_music.xml
@@ -1,9 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MusicActivity">
+    tools:context=".MusicActivity"
+    android:background="@color/colorPrimary">
 
+    <ImageButton
+        android:id="@+id/Play"
+        android:layout_width="246dp"
+        android:layout_height="137dp"
+        android:layout_marginStart="179dp"
+        android:layout_marginTop="346dp"
+        android:layout_marginEnd="177dp"
+        android:layout_marginBottom="334dp"
+        android:onClick="Play"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@android:drawable/ic_media_play" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="381dp"
+        android:layout_height="134dp"
+        android:layout_marginStart="177dp"
+        android:layout_marginTop="185dp"
+        android:layout_marginEnd="126dp"
+        android:layout_marginBottom="97dp"
+        android:text="DANCE  MAME"
+        android:textSize="50sp"
+        app:layout_constraintBottom_toTopOf="@+id/Play"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
